# CloudRift

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cloudrift/: __init__.py  __main__.py
cloudrift/analyzers/: __init__.py  exposure.py  sensitive.py
cloudrift/cli/: main.py
cloudrift/core/: __init__.py  config.py  engine.py
cloudrift/discovery/: __init__.py  jsintel.py  permutations.py
cloudrift/fingerprints/: __init__.py  engine.py
cloudrift/intelligence/: __init__.py  correlation.py  scoring.py
cloudrift/models/: enums.py  report.py
cloudrift/output/: __init__.py  json.py  render.py
cloudrift/providers/: __init__.py  aws.py  azure.py  base.py  cloudflare.py  digitalocean.py  firebase.py  gcp.py  registry.py
cloudrift/utils/: text.py
cloudrift/wordlists/: storage_keywords.txt
docs/: architecture.md
examples/: basic_scan.sh  passive_report.json
screenshots/: README.md
tests/: test_cli.py  test_exposure.py  test_fingerprints.py  test_permutations.py  test_provider_validation.py  test_risk.py  test_sensitive.py
