[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudrift"
version = "0.1.0"
description = "Cloud storage exposure intelligence framework for authorized security research."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Arghya Sikdar" }]
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
cloudrift = "cloudrift.cli.main:main"

[tool.setuptools.packages.find]
include = ["cloudrift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"
